<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kubotaku.android.code4kyoto5374.fragments.HomeSelectFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_area_select_title"
                android:textColor="@android:color/black" />

            <android.support.v4.widget.Space
                android:layout_width="1dp"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_area_selected"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_selected_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#80ffffff"
                android:padding="8dp"
                android:text="@string/text_no_select"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/button_select_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_select_area" />

            <android.support.v4.widget.Space
                android:layout_width="1dp"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/text_place_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_exist_multi_choice"
                android:textColor="@android:color/black"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/spinner_select_town"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

            <android.support.v4.widget.Space
                android:layout_width="1dp"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_selected_area_info"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_selected_area_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#80ffffff"
                android:padding="8dp"
                android:text="@string/text_please_select_area"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <android.support.v4.widget.Space
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#80ffffff"
            android:text="@android:string/cancel" />

        <android.support.v4.widget.Space
            android:id="@+id/space_bw_btn"
            android:layout_width="8dp"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/btn_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#80ffffff"
            android:text="@android:string/ok" />

    </LinearLayout>
</LinearLayout>
